--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <title>Sample webpack</title>
 </head>
 <body>
-    <p>Sample html Test</p>
+    <div id="root">
+      <h1>Hello My Friend!</h1>
+    </div>
 </body>
 </html>
